--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -9,8 +9,11 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@theme-ui/presets": "^0.3.5",
     "gatsby": "^3.0.3",
+    "netlify-identity-widget": "^1.9.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "theme-ui": "^0.3.5"
   }
 }
