--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@theme-ui/presets": "^0.3.5",
     "gatsby": "^3.0.3",
+    "gatsby-plugin-create-client-paths": "^3.0.0",
     "netlify-identity-widget": "^1.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
