--- a/functions/graphql/package.json
+++ b/functions/graphql/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server-lambda": "^2.21.1",
+    "faunadb": "^4.1.1",
     "graphql": "^15.5.0"
   }
 }
