--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -12,6 +12,8 @@
     "@apollo/client": "^3.3.11",
     "@theme-ui/presets": "^0.3.5",
     "apollo-link-context": "^1.0.20",
+    "dotenv": "^8.2.0",
+    "faunadb": "^4.1.1",
     "gatsby": "^3.0.3",
     "gatsby-plugin-create-client-paths": "^3.0.0",
     "netlify-identity-widget": "^1.9.1",
